# pylibdmtx

./: DEVELOPING.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: test.yml
pylibdmtx/: __init__.py
pylibdmtx/scripts/: read_datamatrix.py  write_datamatrix.py
pylibdmtx/tests/: test_dmtx_library.py  test_pylibdmtx.py  test_read_write_datamatrix.py
